# OpenEER

./: .gitignore  README.md  auto_setup_android_sdk.sh  build.gradle.kts  deps.txt  gradle.properties  purge.ps1  settings.gradle.kts  setup_android_sdk.sh
.github/workflows/: Android Instrumented  android-build.yml  android-lint
app/: arbo.txt  arbo_light.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/: arbo.txt  tree.txt
app/src/main/jni/: CMakeLists.txt.bak  jni.c.bak
app/src/main/jni/whisper/: CMakeLists.txt  jni.c
app/src/main/res/drawable/: bg_block_preview.xml  bg_color_swatch.xml  bg_day_badge.xml  bg_note_item.xml  bg_record_bar.xml  bg_round_button.xml  bg_shutter.xml  bg_thumb_square.xml  bg_toolbar_button.xml  ic_attachment.xml  ic_audio_24.xml  ic_audio_wave.xml  ic_block_location.xml  ic_block_route.xml  ic_check.xml  ic_check_circle_24.xml  ic_checklist_badge.xml  ic_close.xml  ic_document.xml  ic_document_generic.xml  ic_file_24.xml  ic_file_generic.xml  ic_file_pdf.xml  ic_file_text.xml  ic_link_small.xml  ic_media_audio_24.xml  ic_media_file_24.xml  ic_more_vert_24.xml  ic_postit_24.xml  ic_route_rec.xml  ic_shape_arrow.xml  ic_shape_circle.xml  ic_shape_ellipse.xml  ic_shape_line.xml  ic_shape_rect.xml  ic_shape_round_rect.xml  ic_shape_star.xml  ic_shape_triangle.xml  ic_stat_name.xml  ic_tool_delete.xml  (+7 more)
app/src/main/res/layout/: activity_alarm_alert.xml  activity_audio_viewer.xml  activity_calendar.xml  activity_camera_capture.xml  activity_day_notes.xml  activity_document_viewer.xml  activity_document_viewer_pdf.xml  activity_document_viewer_web.xml  activity_file_viewer.xml  activity_keyboard_capture.xml  activity_library.xml  activity_main.xml  activity_map.xml  activity_map_snapshot_viewer.xml  activity_note_detail.xml  activity_note_editor.xml  activity_onboarding.xml  activity_pdf_viewer.xml  activity_photo_viewer.xml  activity_screen_capture.xml  activity_sketch_capture.xml  activity_sketch_editor.xml  activity_starter.xml  activity_text_viewer.xml  activity_video_player.xml  bottomsheet_audio_quick_player.xml  (+44 more)
app/src/test/resources/: robolectric.properties
docs/: file_viewer.md  recurring_reminder_custom_interval.md
lib/: build.gradle
(+295 files in other folders)
